--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
     cursor: pointer;
     /* border-bottom: solid 4px #5da0d8; */
 }
+.nav-logo-mediaQuery {
+    display: none;
+}
 .nav-ico-box {
     display: flex;
     background-color: #adafaf;
@@ -38,4 +41,46 @@
     color: #5da0d8;
     cursor: pointer;
     border-bottom: solid 4px #5da0d8;
+}
+.nav-offcanvas {
+    display: none;
+}
+
+/* 네브바 미디어쿼리 -테블릿, 모바일 순 */
+@media (max-width: 992px) {
+    .nav-menu {
+        display: none;
+    }
+    .nav-sns {
+        display: none;
+    }
+    .nav-offcanvas {
+        display: block;
+    }
+    .nav {
+        width: 100vw;
+        padding: 0;
+        display: flex;
+        justify-content: space-evenly;
+        background-color: #5da0d8;
+    }
+    .offcanvas.offcanvas-top {
+        height: 100%;
+        width: 100%;
+    }
+    .btn-primary {
+        border: none;
+        background-color: #5da0d8;
+    }
+    .nav-logo-img {
+        filter: invert(100%);
+    }
+    .nav-logo-mediaQuery {
+        display: block;
+        margin-right: 30vw;
+    }
+    .nav-logo {
+        display: none;
+    }
+
 }
