--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body, html {
   height: 100vh;
 }
 
-.video-section {
+.main-top-video-section {
   position: relative;
   width: 100%;
   height: 0;  
@@ -12,7 +12,7 @@ body, html {
   padding-top: 56.25%; /*반응형에서 종횡비 유지*/ 
 }
 
-.video-section iframe {
+.main-top-video-section iframe {
   position : absolute;
   top : 0 ;
   left : 0 ; 
@@ -22,7 +22,7 @@ body, html {
   object-fit: cover;
 }
 
-.video-content {
+.main-top-video-content {
   position : absolute;
   z-index: 10;
   color: white;
@@ -31,7 +31,7 @@ body, html {
   font-size: 4vw; /* 화면 너비의 4% 로 기본 글자 크기 설정 */
 }
 
-.video-content-hiocoffee {
+.main-top-video-lastline {
   font-weight :800 !important;
 }
 
