--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+@import "reset.css";
+
 /* nav css 정의 */
 .nav {
+    width: 100vw;
     padding: 1vh 10vw;
 }
 .nav-logo:hover {
     cursor: pointer;
-    /* border-bottom: solid 4px #5da0d8; */
 }
 .nav-logo-mediaQuery {
     display: none;
@@ -24,6 +26,7 @@
 }
 .nav-style {
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
