--- a/css/main-top.css
+++ b/css/main-top.css
@@ -31,6 +31,10 @@ body, html {
   font-size: 4vw; /* 화면 너비의 4% 로 기본 글자 크기 설정 */
 }
 
+.main-top-video-firstlines {
+  font-weight : 500 !important;
+}
+
 .main-top-video-lastline {
   font-weight :800 !important;
 }
@@ -48,3 +52,8 @@ body, html {
       left: 10%;
   }
 }
+
+/* 전환 효과를 부드럽게 조정 */ 
+.main-top-carousel-item {
+  transition: transform 1.5s ease, opacity 1.5s ease;
+} 
