--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,21 @@
 @import "reset.css";
+@font-face {
+    font-family: 'TTHakgyoansimJiugaeR';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_keris@1.0/TTHakgyoansimJiugaeR.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 
 body {
-    font-family: 'NotoSans', sans-serif;
+    font-family: 'TTHakgyoansimJiugaeR','NotoSans', sans-serif;
 }
 /* nav css 정의 */
 .nav {
@@ -50,6 +64,32 @@ body {
 .nav-offcanvas {
     display: none;
 }
+.offcanvas-header {
+    background-color: #5da0d8;
+    height: 10vh;
+}
+.offcanvas-header-text {
+    color: white;
+    font-size: 23px;
+    font-weight: bolder;
+}
+.nav-offcanvas-container {
+    height: 50vh;
+    padding: 30px 20px;
+    text-align: center;
+    font-size: 27px;
+    font-weight: bolder;
+    color: #5da0d8;
+}
+.nav-offcanvas-menu {
+    margin-bottom: 20px;
+}
+.nav-offcanvas-menu:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    transition-duration: 0.3s;
+}
+
 
 /* 네브바 미디어쿼리 -테블릿, 모바일 순 */
 @media (max-width: 992px) {
@@ -63,7 +103,7 @@ body {
         display: block;
     }
     .nav {
-        width: 100vw;
+        width: 100%;
         padding: 0;
         display: flex;
         justify-content: space-evenly;
@@ -97,10 +137,11 @@ body {
     height: 400px;
     position : relative;
     bottom: 0px;
+    font-family: 'GmarketSansMedium';
 }
 .footer-items {
-    border: solid 3px red;
-    width: 70vw;
+    border: solid 3px #221f20;
+    width: 90vw;
     height: 40vh;
     position: relative;
     top: 50px;
@@ -129,4 +170,64 @@ body {
     margin-top: 10px;
     font-size: small;
 }
+.footer-info-container {
+    display: flex;
+    color: white;
+    margin-left: 30px;
+    margin-top: 10px;
+}
+.footer-info {
+    margin: 20px 10px;
+}
+.footer-media-logo {
+    display: none;
+}
 
+
+
+/* footer 미디어쿼리 */
+@media (max-width: 992px) {
+    .footer-container {
+        background-color: #5da0d8;
+        height: 400px;
+        position : relative;
+        bottom: 0px;
+    }
+    .footer-items {
+        border: double 4px #ffffff;
+    }
+    .footer-menu-container {
+        display: none;
+    }
+    .footer-secondline-container {
+        display: none;
+    }
+    .footer-info-none {
+        display: none;
+    }
+    .footer-info-container {
+        display: flex;
+        color: white;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer-items {
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform:translate(-50%, -50%); 
+    }
+    .footer-copyright {
+        display: none;
+    }
+    .footer-media-logo {
+        display: block;
+        width: 50vw;
+        margin-top: 10px;
+    }
+    .footer-media-logo-container {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+}
