--- a/css/main-bottom.css
+++ b/css/main-bottom.css
@@ -1,6 +1,50 @@
-#drinks-wrapper {
+#test {
   width: 100%;
-  height: 400px;
+  height: 1000px;
+  background-color: antiquewhite;
+  font-size: 50px;
+}
+
+#drink-section {
+  width: 100%;
+  height: 750px;
+  /* background-color: skyblue; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.drink-text {
+  /* background-color: yellow; */
+  opacity: 0;
+}
+
+.drink-title {
+  text-align: Center;
+  font-size: 65px;
+  color: #1e1e1e;
+  font-weight: 100;
+  margin-bottom: 30px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.drink-title span {
+  color: #5DA0D7;
+  margin-right: -15px;
+}
+
+.drink-text p {
+  font-size: 26px;
+  color: #000;
+  font-weight: 500;
+  text-align: Center;
+}
+
+#drinks-wrapper {
+  margin-top: 100px;
+  width: 100%;
+  height: 430px;
   position: relative;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -9,8 +53,19 @@
   overflow: hidden;
   display: flex;
   align-items: flex-end;
+  /* background-color: blue; */
 }
 
-.drink {
-  background-color: aquamarine;
+.text1 {
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.text2 {
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 25px;
+  width: 80%;
+  min-height: 100px;
+  text-align: center;
 }
