--- a/css/main-bottom.css
+++ b/css/main-bottom.css
@@ -1,21 +1,21 @@
 #test {
   width: 100%;
   height: 1000px;
-  background-color: antiquewhite;
   font-size: 50px;
 }
 
 #drink-section {
   width: 100%;
-  height: 750px;
-  /* background-color: skyblue; */
+  height: 800px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-image: url(../src/drink/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .drink-text {
-  /* background-color: yellow; */
   opacity: 0;
 }
 
@@ -53,7 +53,6 @@
   overflow: hidden;
   display: flex;
   align-items: flex-end;
-  /* background-color: blue; */
 }
 
 .text1 {
@@ -68,4 +67,80 @@
   width: 80%;
   min-height: 100px;
   text-align: center;
+}
+
+@media screen and (min-width: 600px) and (max-width: 992px) {
+  #drink-section {
+    width: 100%;
+    height: 600px;
+    background-color: skyblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #drinks-wrapper {
+    margin-top: 50px;
+    height: 400px;
+  }
+
+  .drink-title {
+    text-align: Center;
+    font-size: 35px;
+    color: #1e1e1e;
+    font-weight: 100;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+  
+  .drink-title span {
+    color: #5DA0D7;
+    margin-right: -8px;
+  }
+  
+  .drink-text p {
+    font-size: 14px;
+    color: #000;
+    font-weight: 500;
+    text-align: Center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #drink-section {
+    width: 100%;
+    height: 500px;
+    background-color: skyblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #drinks-wrapper {
+    margin-top: 50px;
+    height: 350px;
+  }
+
+  .drink-title {
+    text-align: Center;
+    font-size: 25px;
+    color: #1e1e1e;
+    font-weight: 100;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+  
+  .drink-title span {
+    color: #5DA0D7;
+    margin-right: -5px;
+  }
+  
+  .drink-text p {
+    font-size: 14px;
+    color: #000;
+    font-weight: 500;
+    text-align: Center;
+  }
 }
