--- a/css/main-bottom.css
+++ b/css/main-bottom.css
@@ -6,7 +6,7 @@
 
 #drink-section {
   width: 100%;
-  height: 800px;
+  height: 700px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,7 +16,8 @@
 }
 
 .drink-text {
-  opacity: 0;
+  /* opacity: 0; */
+  margin-top: 50px;
 }
 
 .drink-title {
@@ -30,7 +31,7 @@
 }
 
 .drink-title span {
-  color: #5DA0D7;
+  color: #5da0d7;
   margin-right: -15px;
 }
 
@@ -42,7 +43,6 @@
 }
 
 #drinks-wrapper {
-  margin-top: 100px;
   width: 100%;
   height: 430px;
   position: relative;
@@ -69,14 +69,92 @@
   text-align: center;
 }
 
+#map-section {
+  background-color: skyblue;
+  margin-top: 150px;
+  width: 100%;
+  /* height: 930px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.map-text {
+  /* position: relative; */
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+.map-title {
+  text-align: Center;
+  font-size: 65px;
+  color: #1e1e1e;
+  font-weight: 100;
+  margin-bottom: 30px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.map-title span {
+  color: #5da0d7;
+  margin-right: -15px;
+}
+
+.map-text p {
+  font-size: 26px;
+  color: #000;
+  font-weight: 500;
+  text-align: Center;
+}
+
+#map-wrapper {
+  margin: 0 auto;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box {
+  border: 1px solid #e5e5e5;
+  box-shadow: 10px 10px 15px rgb(0 0 0 / 10%);
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 100px;
+}
+
+.map {
+  margin-top: 5%;
+  width: 90%;
+}
+
+.box > h6 {
+  margin: 1.89vw 0 0.54vw;
+  font-size: 2vw;
+  font-family: "Raleway", sans-serif;
+  color: #5da0d7;
+  font-weight: 800;
+}
+
+.box > p {
+  font-size: 1.3vw;
+  color: #000;
+}
+
+.box > span {
+  font-size: 1vw;
+  color: rgba(0, 0, 0, 0.5);
+  margin: 1.39vw 0 3.89vw;
+  display: inline-block;
+  font-weight: 600;
+  text-align: center;
+}
+
 @media screen and (min-width: 600px) and (max-width: 992px) {
   #drink-section {
-    width: 100%;
     height: 600px;
-    background-color: skyblue;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
 
   #drinks-wrapper {
@@ -93,13 +171,39 @@
     letter-spacing: 2px;
     text-transform: uppercase;
   }
-  
+
   .drink-title span {
-    color: #5DA0D7;
+    color: #5da0d7;
     margin-right: -8px;
   }
-  
+
   .drink-text p {
+    font-size: 14px;
+    color: #000;
+    font-weight: 500;
+    text-align: Center;
+  }
+
+  #map-section {
+    height: 600px;
+  }
+
+  .map-title {
+    text-align: Center;
+    font-size: 35px;
+    color: #1e1e1e;
+    font-weight: 100;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+
+  .map-title span {
+    color: #5da0d7;
+    margin-right: -8px;
+  }
+
+  .map-text p {
     font-size: 14px;
     color: #000;
     font-weight: 500;
@@ -109,12 +213,7 @@
 
 @media screen and (max-width: 600px) {
   #drink-section {
-    width: 100%;
     height: 500px;
-    background-color: skyblue;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
 
   #drinks-wrapper {
@@ -131,13 +230,39 @@
     letter-spacing: 2px;
     text-transform: uppercase;
   }
-  
+
   .drink-title span {
-    color: #5DA0D7;
+    color: #5da0d7;
     margin-right: -5px;
   }
-  
+
   .drink-text p {
+    font-size: 14px;
+    color: #000;
+    font-weight: 500;
+    text-align: Center;
+  }
+
+  #map-section {
+    height: 500px;
+  }
+
+  .map-title {
+    text-align: Center;
+    font-size: 25px;
+    color: #1e1e1e;
+    font-weight: 100;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+
+  .map-title span {
+    color: #5da0d7;
+    margin-right: -5px;
+  }
+
+  .map-text p {
     font-size: 14px;
     color: #000;
     font-weight: 500;
