--- a/css/main-bottom.css
+++ b/css/main-bottom.css
@@ -70,7 +70,6 @@
 }
 
 #main-bottom-map-section {
-  background-color: skyblue;
   margin-top: 150px;
   width: 100%;
   /* height: 930px; */
@@ -152,6 +151,14 @@
   text-align: center;
 }
 
+#main-bottom-map-section {
+  display: block;
+}
+
+#main-bottom-mobile-map-section {
+  display: none;
+}
+
 @media screen and (min-width: 600px) and (max-width: 992px) {
   #main-bottom-drink-section {
     height: 600px;
@@ -208,6 +215,59 @@
     color: #000;
     font-weight: 500;
     text-align: Center;
+  }
+
+  #main-bottom-map-section {
+    display: none;
+  }
+
+  #main-bottom-mobile-map-section {
+    display: block;
+  }
+
+  .main-bottom-mobile-map-box-wrapper {
+    margin: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-bottom-mobile-map-box {
+    border: 1px solid #e5e5e5;
+    box-shadow: 10px 10px 15px rgb(0 0 0 / 10%);
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .main-bottom-mobile-map {
+    margin-top: 5%;
+    width: 90%;
+  }
+
+  .main-bottom-mobile-map-box > h6 {
+    margin: 0.9vw 0 0.27vw;
+    font-size: 4vw;
+    font-family: "Raleway", sans-serif;
+    color: #5da0d7;
+    font-weight: 800;
+  }
+
+  .main-bottom-mobile-map-box > p {
+    font-size: 2.6vw;
+    color: #000;
+  }
+
+  .main-bottom-mobile-map-box > span {
+    font-size: 2vw;
+    color: rgba(0, 0, 0, 0.5);
+    margin: 1vw 0 1.9vw;
+    display: inline-block;
+    font-weight: 600;
+    text-align: center;
   }
 }
 
@@ -267,5 +327,58 @@
     color: #000;
     font-weight: 500;
     text-align: Center;
+  }
+
+  #main-bottom-map-section {
+    display: none;
+  }
+
+  #main-bottom-mobile-map-section {
+    display: block;
+  }
+
+  .main-bottom-mobile-map-box-wrapper {
+    margin: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-bottom-mobile-map-box {
+    border: 1px solid #e5e5e5;
+    box-shadow: 10px 10px 15px rgb(0 0 0 / 10%);
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .main-bottom-mobile-map {
+    margin-top: 5%;
+    width: 90%;
+  }
+
+  .main-bottom-mobile-map-box > h6 {
+    margin: 1.89vw 0 0.54vw;
+    font-size: 8vw;
+    font-family: "Raleway", sans-serif;
+    color: #5da0d7;
+    font-weight: 800;
+  }
+
+  .main-bottom-mobile-map-box > p {
+    font-size: 5.2vw;
+    color: #000;
+  }
+
+  .main-bottom-mobile-map-box > span {
+    font-size: 3vw;
+    color: rgba(0, 0, 0, 0.5);
+    margin: 1.39vw 0 3.89vw;
+    display: inline-block;
+    font-weight: 600;
+    text-align: center;
   }
 }
