--- a/css/style.css
+++ b/css/style.css
@@ -186,9 +186,6 @@ body {
         position : relative;
         bottom: 0px;
     }
-    .footer-items {
-        border: double 4px #ffffff;
-    }
     .footer-menu-container {
         display: none;
     }
@@ -209,6 +206,8 @@ body {
         top: 50%;
         left: 50%;
         transform:translate(-50%, -50%); 
+        border: double 4px #ffffff;
+        height: 40vh;
     }
     .footer-copyright {
         display: none;
