--- a/css/main-bottom.css
+++ b/css/main-bottom.css
@@ -58,17 +58,75 @@
   text-align: center;
 }
 
+#main-bottom-follow-section {
+  background-color: #fefcea;
+  margin-top: 70px;
+  padding: 100px 0;
+}
+
+.main-bottom-follow-inner {
+  width: 100%;
+  position: relative;
+  max-width: 90% !important;
+  margin: 0 auto;
+}
+
+.main-bottom-follow-title {
+  text-align: center;
+}
+
+.main-bottom-follow-title h5 {
+  padding: 15px 0;
+  font-size: 42px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.5px;
+  color: #5DA0D7;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+}
+
+.main-bottom-follow-title a {
+  display: block;
+  font-size: 15px;
+  color: #5DA0D7;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  text-decoration: none;
+}
+
+.main-bottom-follow-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.main-bottom-follow-box {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-bottom-follow-box a {
+  display: block;
+  width: 95%;
+  height: 95%;
+}
+
+.main-bottom-follow-box img {
+  width: 100%;
+}
+
 #main-bottom-map-section {
   margin-top: 150px;
   width: 100%;
-  /* height: 930px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .main-bottom-map-text {
-  /* position: relative; */
   margin-top: 100px;
   margin-bottom: 50px;
 }
@@ -110,7 +168,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 5vw;
 }
 
 .main-bottom-map {
@@ -140,18 +198,6 @@
   text-align: center;
 }
 
-/* .carousel-control-prev-icon,
-.carousel-control-next-icon {
-  height: 100px;
-  width: 100px;
-  outline: black;
-  background-size: 100%, 100%;
-  border-radius: 50%;
-  border: 1px solid black;
-  background-image: none;
-} */
-
-/* 기본 상태에서 버튼 아이콘을 투명하게 설정 */
 .carousel-control-prev-icon:after {
   content: "<";
   font-size: 55px;
@@ -162,6 +208,10 @@
   content: ">";
   font-size: 55px;
   color: skyblue;
+}
+
+#main-bottom-map-section {
+  display: block;
 }
 
 #main-bottom-mobile-map-section {
@@ -190,13 +240,9 @@
   .main-bottom-text1 {
     font-size: 20px;
   }
-  
+
   .main-bottom-text2 {
     font-size: 25px;
-  }
-
-  #main-bottom-map-section {
-    height: 600px;
   }
 
   #main-bottom-map-section {
@@ -233,7 +279,7 @@
   .main-bottom-text1 {
     font-size: 15px;
   }
-  
+
   .main-bottom-text2 {
     font-size: 20px;
   }
@@ -251,7 +297,7 @@
   }
 
   .main-bottom-mobile-map-box-wrapper {
-    margin: 10px;
+    margin: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -293,5 +339,23 @@
     margin: 1.39vw 0 3.89vw;
     display: inline-block;
     text-align: center;
+  }
+
+  .main-bottom-follow-box {
+    width: calc(100% / 3);
+  }
+}
+
+@media screen and (max-width: 612px) {
+  #main-bottom-drink-section {
+    margin-top: 100px;
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 465px) {
+  #main-bottom-drink-section {
+    margin-top: 150px;
+    height: 500px;
   }
 }
