--- a/css/main-bottom.css
+++ b/css/main-bottom.css
@@ -7,6 +7,7 @@
   background-image: url(../src/drink/background.jpg);
   background-position: center;
   background-repeat: no-repeat;
+  text-align: center;
 }
 
 .main-bottom-drink-text {
@@ -30,6 +31,7 @@
 .main-bottom-drink-txt {
   font-size: 26px;
   font-weight: 500;
+  text-align: center;
 }
 
 #main-bottom-drinks-wrapper {
@@ -62,6 +64,7 @@
   background-color: #fefcea;
   margin-top: 70px;
   padding: 100px 0;
+  text-align: center;
 }
 
 .main-bottom-follow-inner {
@@ -124,6 +127,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
 }
 
 .main-bottom-map-text {
