--- a/css/menu-bottom.css
+++ b/css/menu-bottom.css
@@ -204,6 +204,9 @@ body {
   .menu-custom-card {
     padding: 4px;
   }
+  .last-season-title h4 {
+    font-size: 30px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -215,7 +218,7 @@ body {
     padding: 2px;
   }
   .last-season-title h4 {
-    font: 30px;
+    font: 22px;
   }
 }
 /* 슬라이드 미디어 쿼리 */
