--- a/menu-top.css
+++ b/menu-top.css
@@ -163,7 +163,7 @@ display: none; /* 기본적으로 숨기기 */
     border: 1px solid #2f2e2e;
     display: flex;
     align-items: center;
-    
+    flex-wrap: nowrap;
 }
 
 .menutop-nav-link{
@@ -174,6 +174,13 @@ display: none; /* 기본적으로 숨기기 */
 .menutop-nav-link:hover{
     color: #5da0d7;
 
+}
+@media screen and (min-width: 800px) and (max-width: 1000px) {
+    .menutop-nav-link{ 
+        font-size: 12px;
+        text-align: center;
+    }
+    
 }
 
 
@@ -326,27 +333,50 @@ display: none; /* 기본적으로 숨기기 */
     }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 800px)and (min-width: 1280px) {
     .menutop-inner {
         position: relative;
+        display: flex;
         max-width: 1280px !important;
         margin: 0 auto;
+        justify-content: space-between;
     }
+    .menutop-inner-whitelogo{
+        align-self: center; /* 이미지 컨테이너를 수직 중앙으로 배치 */
+        margin-left: 20px; 
+
+    }
+    .menutop-inner-whitelogo img{
+        max-width: 100%; /* 이미지 크기를 부모 요소에 맞게 조절 */
+        height: auto; /* 이미지 비율 유지 */
+        margin-top: 100px;
+    }
+
 }
 @media screen and (max-width: 799px) {
     .menutop-subvisual {
-        background-image: url(https://www.hiocoffee.com/sub/img/ll_03_mo.jpg) !important;
+        
+        background-image: url(./src/menu-top-pic.jpg) !important;
         background-color: rgba(0, 0, 0, 0.4);
         background-blend-mode: multiply;
+        
     }
-}
-@media screen and (max-width: 799px) {
-    .menutop-subvisual {
-        background-image: url(https://www.hiocoffee.com/sub/img/ll_03_mo.jpg) !important;
-        background-color: rgba(0, 0, 0, 0.4);
-        background-blend-mode: multiply;
+    .menutop-inner-whitelogo{
+        display: flex;
+        justify-content: center; /* 이미지 컨테이너를 수직 중앙으로 배치 */
+        
     }
+    .menutop-inner-whitelogo img{
+        max-width: 100%; /* 이미지 크기를 부모 요소에 맞게 조절 */
+        height: auto; /* 이미지 비율 유지 */
+        
+    }
+
+
+    
 }
+
+
 
 @media screen and (min-width: 800px) and (max-width: 1279px) {
     .menutop-pc {
@@ -358,9 +388,18 @@ display: none; /* 기본적으로 숨기기 */
         display: none;
     }
 }
+/* @media (max-width: 799px) {
+    .nav {
+        width: 100%;
+        padding: 0;
+        display: flex;
+        justify-content: space-evenly;
+        background-color: #5da0d8;
+    }
+} */
 /* 모바일 모드 전환 */
 @media (max-width: 800px) {
-    .menutop-bo-cate .nav {
+    .menutop-bo-cate .menutop-nav {
         display: none;
     }
     .menutop-bo-cate-first {
@@ -368,7 +407,7 @@ display: none; /* 기본적으로 숨기기 */
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 799px) {
     .menutop-nav-underline {
         display: none;
     }
